--- a/public/create/index.html
+++ b/public/create/index.html
@@ -59,7 +59,7 @@
             </div>
         </div>
      
-        <script src = "../socket.io/socket.io.js"></script>
+        <script src = "/socket.io/socket.io.js"></script>
         <script src = "../js/create.js"></script>
 
         <footer class="footer">
