--- a/public/create/quiz-creator/index.html
+++ b/public/create/quiz-creator/index.html
@@ -80,7 +80,7 @@
         </div>
 
         <!-- ✅ Scripts -->
-        <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
         <script src="../js/create.js"></script>
 
         <!-- ✅ Footer -->
