--- a/public/create/quiz-creator/index.html
+++ b/public/create/quiz-creator/index.html
@@ -81,7 +81,7 @@
 
         <!-- ✅ Scripts -->
         <script src="/socket.io/socket.io.js"></script>
-        <script src="../js/create.js"></script>
+        <script src="/js/quizCreator.js"></script>
 
         <!-- ✅ Footer -->
         <footer class="footer">
