--- a/public/host/index.html
+++ b/public/host/index.html
@@ -63,6 +63,6 @@
 <script src="../socket.io/socket.io.js"></script>
 <script src="../js/libs/jqueryLibrary.js"></script>
 <script src="../js/libs/deparam.js"></script>
-<script src="../js/host.js"></script>
+<script src="/js/host.js"></script>
 </body>
 </html>
